Fixed bgimg on mobile

--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,10 @@ html {
     background-color: hsl(225, 100%, 94%);
 }
 
-.bgimg-mob {
-    z-index: 0;
+body {
+    background-image: url(images/pattern-background-mobile.svg);
+    background-repeat: no-repeat;
+    background-position: center top;
 }
 
 .component {
@@ -23,7 +25,9 @@ html {
     background-color: white;
     border-radius: 20px;
     max-width: 326px;
-    margin: 88px auto;
+    margin: auto;
+    position: relative;
+    top: 70px;
     box-shadow: 0 16px 24px 4px hsla(245, 79%, 24%, 0.14);
 }
 
